# simul-specfit

./: .gitignore  G395M_wav.npy  PRISM_wav.npy  compare.py  concatResults.py  conda.env  config-154183.json  config-broad.json  config-naidu.json  config-narrow.json  config.json  fit-rubies.py  fit-ruby.py  out.csv  pyproject.toml  summary.csv
RUBIES/Analysis/: compare.py
RUBIES/Photometry/: concatenatePhotometry.py
RUBIES/Scripts/: broad-compare.py  broadplot.py  concatResults.py  coverage.py  fit-naidu.py  fit-rubies.py  fit-ruby.py  merge.py  synmag.py  zoom.py
RUBIES/Spectra/: downloadSpectra.py
RUBIES/Targets/: getTargets.py  makeFitSample.py  makeSettonSample.py
config/: config-broad.json  config-cauchy.json  config-ha-zdiff.json  config-ha-zequal.json  config-narrow.json  config-wang.json  config-zdiff.json  config-zequal.json
simul_specfit/: calibration.py  defaults.py  fitting.py  initial.py  model.py  optimized.py  parameters.py  plotting.py  priors.py  spectra.py  utils.py
test/: fwhm.py  ns-test.py  resolution-fitting-test.py  test.py
