[project]
authors = [{name = "TheSkyentist", email = "raphael.hviding@gmail.com"}]
description = "Simultaneous Spectroscopic Fitting of NIRSpec PRISM/G395M"
name = "simul-specfit"
requires-python = ">=3.12, <3.14"
version = "0.3.0"
dependencies = [ "numpyro>=0.16.1,<0.17", "jaxns>=2.6.6,<3", "tensorflow-probability>=0.25.0,<0.26", "astropy>=7.0.0,<8", "matplotlib>=3.10.0,<4", "jax>=0.5.0,<0.6", "graphviz>=0.20.3,<0.21", "requests>=2.32.3,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["simul_specfit"]

[tool.pixi.project]
name = "RUBIES-BL"
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.activation]
env = {"JAX_ENABLE_X64" = "1", "JAX_LOGGING_LEVEL" = "ERROR"}

[tool.pixi.tasks]

[tool.pixi.dependencies]
cmake = ">=3.31.4,<4"
python = ">=3.13,<3.14"
ipython = ">=8.31.0,<9"
graphviz = ">=12.0.0,<13"
numpy = ">=2.2.2,<3"
bs4 = ">=4.12.3,<5"

[tool.pixi.pypi-dependencies]
simul-specfit = {path = ".", editable = true}
